change style for mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My first bitstarter - AnhDN</title>
+    <title>VietF</title>
     <meta name"viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -112,7 +112,7 @@
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="brand" href="#">askMyk</a>
+	  <a class="brand" href="#">VietF</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active"><a href="#">Home</a></li>
@@ -133,19 +133,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>askMyk</h1>
+	  <h1>VietF</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph.  -->
 	  <!-- http://twitter.github.io/boostrap/base-css.html#typography -->
-	  <p class="lead">Anything and Everything in Nairobi</p>
+	  <p class="lead">VietNam Finance News</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://www.taichinhvietnam.com/vietnamfinancial/uploads/quang-cao-bao-chi-thoi_bao-tai-chinh-viet-nam.jpg">
 	</div>
 
 	<!-- We define a new 'actions' div to contain statistics, order, and share buttons -->
@@ -200,7 +200,7 @@
 	<!-- http://placehold.it -->
 	<div class="row-fluid section1">
 	  <div class="span5 offset1 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	    <img class="img-polaroid" src="http://infonet.vn/Uploaded/Old/471/t471678.jpg.ashx?width=580&height=326&crop=auto">
 	  </div>
 	  <div class="span5 copy">
 	    <p>
@@ -219,7 +219,7 @@
 	    </p>
 	  </div>
 	  <div class="span5 asset">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	    <img class="img-polaroid" src="http://t3.gstatic.com/images?q=tbn:ANd9GcQE62z1b8_4Q7RkdeBpEFwWqm9uAZ0m3L5QQELsHGwQ8dJFLwRUSw">
 	  </div>
 	</div>
 
